workspaces/DC Dev/DC Dev/src/objects/Line_Item__c.object
<CustomObject>
    <description>Holds a single line item in an invoice.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Holds the final amount per merchandise</description>
        <label>Amount</label>
        <precision>9</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Statement__c</fullName>
        <description>Relates the line items to the invoice.</description>
        <label>Invoice Statement</label>
        <referenceTo>Invoice_Statement__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise_Name__c</fullName>
        <formula>Merchandise__r.Merchandise_Name__c</formula>
        <label>Merchandise Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <description>Relates a merchandise to a line item.</description>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Holds the quantity of each merchandise purchased.</description>
        <label>Quantity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LIN-{0000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>